<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

        <!-- General settings -->
        <PreferenceCategory android:key="general_category"
                android:title="@string/general_sound_title">

                <CheckBoxPreference android:key="pref_wm8994_control_enable"
                        android:title="@string/pref_wm8994_control_enable_title"
                        android:summary="@string/pref_wm8994_control_enable_summary" />
        </PreferenceCategory>

        <!--  Internal speaker options -->
        <PreferenceCategory android:key="wm8994_internal_speaker_category"
                android:title="@string/category_wm8994_internal_speaker">

                <CheckBoxPreference android:key="pref_wm8994_speaker_tuning"
                        android:title="@string/pref_wm8994_speaker_tuning_title"
                        android:summary="@string/pref_wm8994_speaker_tuning_summary"
                        android:dependency="pref_wm8994_control_enable" />

    </PreferenceCategory>

    <!-- Signal Processing -->
    <PreferenceCategory android:key="wm8994_signal_processing_category"
        android:title="@string/category_wm8994_signal_processing">

                <CheckBoxPreference android:key="pref_wm8994_mono_downmix"
                        android:title="@string/pref_wm8994_mono_downmix_title"
                        android:summary="@string/pref_wm8994_mono_downmix_summary"
                        android:dependency="pref_wm8994_control_enable" />

                <CheckBoxPreference android:key="pref_wm8994_stereo_expansion"
                        android:title="@string/pref_wm8994_stereo_expansion_title"
                        android:summary="@string/pref_wm8994_stereo_expansion_summary"
                        android:dependency="pref_wm8994_control_enable" />

        </PreferenceCategory>

        <!--  D/AC, A/DC -->
        <PreferenceCategory android:key="wm8994_dac_config_category"
                android:title="@string/category_wm8994_dac_config">

                <CheckBoxPreference android:key="pref_wm8994_dac_direct"
                        android:title="@string/pref_wm8994_dac_direct_title"
                        android:summary="@string/pref_wm8994_dac_direct_summary"
                        android:dependency="pref_wm8994_control_enable" />

                <CheckBoxPreference android:key="pref_wm8994_dac_osr128"
                        android:title="@string/pref_wm8994_dac_osr128_title"
                        android:summary="@string/pref_wm8994_dac_osr128_summary"
                        android:dependency="pref_wm8994_control_enable" />

                <CheckBoxPreference android:key="pref_wm8994_adc_osr128"
                        android:title="@string/pref_wm8994_adc_osr128_title"
                        android:summary="@string/pref_wm8994_adc_osr128_summary"
                        android:dependency="pref_wm8994_control_enable" />

        </PreferenceCategory>

        <!-- Codec settings -->
        <PreferenceCategory android:key="wm8994_codec_optimization_category"
                android:title="@string/category_wm8994_codec_optimization">

                <CheckBoxPreference android:key="pref_wm8994_fll_tuning"
                        android:title="@string/pref_wm8994_fll_tuning_title"
                        android:summary="@string/pref_wm8994_fll_tuning_summary"
                        android:dependency="pref_wm8994_control_enable" />

        </PreferenceCategory>

</PreferenceScreen>
