<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- General settings -->
    <PreferenceCategory android:key="category_cpu"
        android:title="@string/category_cpu_title">

        <CheckBoxPreference android:key="deepidle"
            android:title="@string/cpu_deepidle_title_head"
            android:summary="@string/cpu_deepidle_summary_head" />
        <com.cyanogenmod.settings.device.LulzactiveTuningPreference
            android:key="lulzactive_tuning"
            android:title="@string/lulzactive_tuning_title_head"
            android:summary="@string/lulzactive_tuning_summary_head" />
    </PreferenceCategory>

    <!-- Touch key backlight timeout -->
    <PreferenceCategory android:key="category_touchkey"
        android:title="@string/category_touchkey_title">
        <CheckBoxPreference android:key="touchkey_notification"
            android:title="@string/touchkey_notification_title_head"
            android:summary="@string/touchkey_notification_summary_head" />
    </PreferenceCategory>

</PreferenceScreen>
