<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/app_name">

    <!-- Color tuning -->
    <com.cyanogenmod.settings.device.ColorTuningPreference
        android:key="color_tuning"
        android:title="@string/color_tuning_title_head"
        android:summary="@string/color_tuning_summary_head" />
    <com.cyanogenmod.settings.device.GammaTuningPreference
        android:key="gamma_tuning"
        android:title="@string/gamma_tuning_title_head"
        android:summary="@string/gamma_tuning_summary_head" />
    <com.cyanogenmod.settings.device.ColorHackPresets
        android:key="color_presets"
        android:title="@string/color_hack_presets_title_head"
        android:summary="@string/color_hack_presets_summary_head" />

</PreferenceScreen>
